--- a/plugin-hello-stacker/templates/index.html
+++ b/plugin-hello-stacker/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            var name = prompt("What is you name stacker?")
+            var name = prompt("What is your name stacker?")
             document.body.innerHTML = document.body.innerHTML.replace('Stacker', name);
         });
     </script>
